<resources>
    <string name="app_name">AIVIE</string>

    <!-- Log in Activity -->
    <string name="log_into_account">Log into your account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">LOG IN</string>
    <string name="need_account">Need an account? </string>
    <string name="need_account_sign_up">SIGN UP</string>

    <!-- Sign up Activity -->
    <string name="create_account">Create an account</string>
    <string name="prompt_create_last_name">Last Name</string>
    <string name="prompt_create_first_name">First Name</string>
    <string name="prompt_create_display_name">Display Name (Optional)</string>
    <string name="prompt_create_email">Email</string>
    <string name="prompt_create_password">Password</string>
    <string name="action_signup">CREATE ACCOUNT</string>
    <string name="have_account">Have an account? </string>
    <string name="have_account_log_in">LOG IN</string>

    <string name="confirm">Confirm</string>

    <!-- ICF Activity -->
    <string name="icf_review_and_sign">Please review and sign your ICF</string>
    <string name="icf_review">REVIEW ICF</string>
    <string name="icf_sign">SIGN ICF</string>
    <string name="skip_now">Skip now</string>

    <!-- Ethnicity -->
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_na">Not Specified</string>

    <!-- Race -->
    <string name="race_white">White</string>
    <string name="race_white_desc">A person having origins in any of the original peoples of Europe, the Middle East, or North Africa.</string>
    <string name="firestore_race_white">W</string>
    <string name="race_asian">Asian</string>
    <string name="race_asian_desc">A person having origins in any of the original peoples of the Far East, Southeast Asia, or the Indian subcontinent including, for example, Cambodia, China, India, Japan, Korea, Malaysia, Pakistan, the Philippine Islands, Taiwan, Thailand, and Vietnam.</string>
    <string name="firestore_race_asian">S</string>
    <string name="race_black">Black or African American</string>
    <string name="race_black_desc">A person having origins in any of the Black racial groups of Africa.</string>
    <string name="firestore_race_black">B</string>
    <string name="race_hawaiian">Native Hawaiian or Other Pacific Island</string>
    <string name="race_hawaiian_desc">A person having origins in any of the original peoples of Hawaii, Guam, Samoa, or other Pacific Islands.</string>
    <string name="firestore_race_hawaiian">P</string>
    <string name="race_alaska">American Indian or Alaska Native</string>
    <string name="race_alaska_desc">A person having origins in any of the original peoples of North and South America (including Central America) and who maintains tribal affiliation or community attachment.</string>
    <string name="firestore_race_alaska">A</string>
    <string name="firestore_race_unknown">O</string>

    <!-- Ethnicity -->
    <string name="ethnicity_hispanic_latino">Hispanic or Latino</string>
    <string name="ethnicity_hispanic_latino_desc">A person of Cuban, Mexican, Puerto Rican, South or Central American, or other Spanish culture or origin, regardless of race.</string>
    <string name="ethnicity_not_hispanic_latino">Not Hispanic or Latino</string>

    <!-- Profile Activity -->
    <string name="update_profile">Please update patient profile and demographics data</string>

    <!-- Home Activity -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Home Frag -->
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="study_title">Study Title</string>
    <string name="visit_plan">Visit Plan</string>
    <!-- Profile Frag -->
    <string name="subject_number">Subject Number</string>
    <string name="eIcf">eICF</string>
    <string name="eIcf_signed">eICF Signed</string>
    <string name="display_name">Display Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="yyyy_MM_dd">yyyy-MM-dd</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="race">Race</string>
    <string name="icf_has_signed">Signed</string>
    <string name="icf_has_not_signed">NOT Signed</string>

    <!-- Firestore Collection name -->
    <string name="firestore_users">users</string>
    <string name="firestore_gender">gender</string>
    <string name="firestore_roles">roles</string>
    <string name="firestore_race">race</string>
    <string name="firestore_ethnicity">ethnicity</string>
    <string name="firestore_studies">studies</string>
    <string name="firestore_icf">icf</string>

    <!-- Firestore common column -->
    <string name="firestore_column_id">Id</string>
    <string name="firestore_column_title">Title</string>

    <!-- Firestore Columns in collection "users" -->
    <string name="firestore_users_display_name">DisplayName</string>
    <string name="firestore_users_first_name">FirstName</string>
    <string name="firestore_users_last_name">LastName</string>
    <string name="firestore_users_birthday">DOB</string>
    <string name="firestore_users_email">Email</string>
    <string name="firestore_users_age">Age</string>
    <string name="firestore_users_gender">Gender</string>
    <string name="firestore_users_race">Race</string>
    <string name="firestore_users_ethnicity">Ethnicity</string>
    <string name="firestore_users_role">Role</string>
    <string name="firestore_users_eicf">eICF</string>
    <string name="firestore_users_eicf_signed">eICF_Signed</string>
    <string name="firestore_users_patient_of_study">PatientOfStudy</string>
    <string name="firestore_users_subject_num">SubjectNumber</string>
    <string name="firestore_users_site">Site</string>

    <!-- Firestore Columns in collection "studies" -->
    <string name="firestore_studies_id">Id</string>
    <string name="firestore_studies_title">Title</string>
    <string name="firestore_studies_visit_plan">VisitPlan</string>

    <!-- Firestore document in collection "gender" -->
    <string name="firestore_gender_male">MALE</string>
    <string name="firestore_gender_female">FEMALE</string>
    <string name="firestore_gender_na">Not Specified</string>
    <string name="firestore_gender_unknown">UNKNOWN</string>

    <!-- Firestore document in collection "role" -->
    <string name="firestore_role_cg">CG</string>
    <string name="firestore_role_cra">CRA</string>
    <string name="firestore_role_pi">PI</string>
    <string name="firestore_role_pt">PT</string>
    <string name="firestore_role_sc">SC</string>
    <string name="firestore_role_sponsor">SPONSOR</string>
    <string name="firestore_role_unknown">UNKNOWN</string>

    <!-- Firestore document in collection "ethnicity" -->
    <string name="firestore_ethnicity_h">H</string>
    <string name="firestore_ethnicity_n">N</string>
    <string name="firestore_ethnicity_unknown">UNKNOWN</string>

    <!-- Firebase Storage Folder -->
    <string name="firebase_storage_icf">ICF</string>
    <string name="firebase_storage_icf_signature">ICF_Signature</string>
    <string name="title_activity_home_adm">HomeAdmActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

</resources>
