<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/subjectNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/subject_number"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="name"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/prompt_create_last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="name"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/prompt_create_first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/displayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="name"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/prompt_create_display_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:importantForAutofill="no"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/yyyy_MM_dd"
            android:inputType="date" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:importantForAutofill="no"
            android:ems="10"
            android:enabled="true"
            android:focusable="false"
            android:hint="@string/age"
            android:inputType="number" />

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:importantForAutofill="no"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/gender"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ethnicity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:importantForAutofill="no"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/ethnicity"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:importantForAutofill="no"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/race"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="50sp" />

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>