<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="aivie.developer.aivie.ui.user.home.HomeUserFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_user" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="aivie.developer.aivie.ui.user.profile.ProfileUserFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile_user" />

    <fragment
        android:id="@+id/navigation_adverse_events"
        android:name="aivie.developer.aivie.ui.user.AdverseEventsUserFragment"
        android:label="Adverse Events"
        tools:layout="@layout/adverse_events_user_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="aivie.developer.aivie.ui.user.dashboard.DashboardUserFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard_user" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="aivie.developer.aivie.ui.user.notifications.NotificationsUserFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications_user" />
</navigation>
